# r

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
Elf-Stuffer/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Elf-Stuffer/example/: printmain.c  writeconst.c
Elf-Stuffer/tests/: elf_test.py
aimtrainer2/: Makefile  README.md  go.mod
aimtrainer2/cmd/main/: main.go
aimtrainer2/pkg/merkle/: merkle.go  merkle_test.go
bassoon/: Cargo.toml  todo.txt
bassoon/src/: main.rs  set1.rs  set2.rs  utils.rs
elf-stuffer/: elfformat.py  main.py
elf-stuffer/.github/workflows/: poetry.yml
elf-stuffer/example/: entrypoint.c  entrypoint2.c  hello.s  writemain.c
goterpreter/: .golangci.yaml  LICENSE  README.md  expressions.go  go.mod  lexer.go  main.go  parser.go  scanner.go  token.go
lombardy/: .gitignore  default.nix  go.mod  gomod2nix.toml  package-lock.json  shell.nix  tailwind.config.js  tailwind.css
lombardy/src/: main.go
lombardy/static/templates/: index.html
lombardy/templates/: index.html
src/: main.go
